--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,83 @@
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	padding: 0;
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
+		Helvetica Neue, sans-serif;
+	background: url("/static/background.png");
+	background-position: 50%;
+	background-repeat: no-repeat;
+	background-size: cover;
+	color: #373b64;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+	color: inherit;
+	text-decoration: none;
 }
 
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+p {
+	font-weight: 500;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+hr,
+p,
+pre {
+	margin: 0;
+}
+
+button {
+	background-color: transparent;
+	background-image: none;
+	font-weight: 600;
+}
+
+button:focus {
+	outline: 1px dotted;
+	outline: 5px auto -webkit-focus-ring-color;
+}
+
+/* glass-morphism */
+.glass {
+	background: hsla(0, 0%, 100%, 0.4);
+	-webkit-backdrop-filter: blur(10px);
+	backdrop-filter: blur(10px);
+	border: 1px solid hsla(0, 0%, 100%, 0.2);
+}
+
+.glass:hover {
+	background: hsla(0, 0%, 100%, 0.7);
+	border: 1px solid #fff;
+}
+
+:root {
+	--text-green: rgb(70, 172, 3);
+	--text-green-darker: rgb(58, 145, 0);
+	--text-green-light: #9bbf8a;
+	--text-white-100: rgba(229, 231, 235, 1);
+	--text-shodow-yellow: #faf5aa 1px 0 10px;
+	--text-base-color: rgb(69, 69, 69);
+}
+
+/* glass-morphism */
+.glass {
+	background: hsla(0, 0%, 100%, 0.4);
+	-webkit-backdrop-filter: blur(10px);
+	backdrop-filter: blur(10px);
+	border: 1px solid hsla(0, 0%, 100%, 0.2);
+}
+
+.glass:hover {
+	background: hsla(0, 0%, 100%, 0.7);
+	border: 1px solid #fff;
 }
